fix(code-examples): wrap rather than scroll (#418)

--- a/components/code-example/common.css
+++ b/components/code-example/common.css
@@ -24,7 +24,11 @@
 
   pre {
     display: flex;
+
     margin: 0;
+
+    white-space: pre-wrap;
+
     background-color: var(--color-background-secondary);
 
     code {
